# rust-chat

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  message_list.rs  send_dialog.rs  user_list.rs
