[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.69", features = ["HtmlTextAreaElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }